--- a/css/slide.css
+++ b/css/slide.css
@@ -2,20 +2,33 @@ body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  background-color: rgb(237, 246, 247);
+}
+
+.slide {
+  background-color: rgb(237, 246, 247);
+  margin-top: 5vh;
+}
+.slide > p {
+  position: absolute;
+  color: #262626;
+  font-size: 5vh;
+  font-family: "Times New Roman", Times, serif;
+  margin: 2px;
 }
 
 .containSlide {
-  height: 500px;
-  width: 500px;
-  border: 1px solid black;
+  height: 80vh;
+  width: 50vh;
   display: none;
+  margin: auto;
 }
 .containSlide__containImg {
-  height: 400px;
-  border-bottom: 1px solid black;
+  height: 60vh;
 }
 .containSlide__containImg__image {
   height: 100%;
+  border-radius: 15px 15px 0px 0px;
 }
 .containSlide__containImg__image--n1 {
   background: linear-gradient(146deg, rgba(44, 35, 109, 0.5) 0%, rgba(44, 35, 109, 0.5) 14.286%, rgba(64, 54, 108, 0.5) 14.286%, rgba(64, 54, 108, 0.5) 28.572%, rgba(83, 72, 106, 0.5) 28.572%, rgba(83, 72, 106, 0.5) 42.858%, rgba(103, 91, 105, 0.5) 42.858%, rgba(103, 91, 105, 0.5) 57.144%, rgba(123, 110, 103, 0.5) 57.144%, rgba(123, 110, 103, 0.5) 71.43%, rgba(142, 128, 102, 0.5) 71.43%, rgba(142, 128, 102, 0.5) 85.716%, rgba(162, 147, 100, 0.5) 85.716%, rgba(162, 147, 100, 0.5) 100.002%), linear-gradient(349deg, rgb(203, 4, 7) 0%, rgb(203, 4, 7) 14.286%, rgb(178, 9, 6) 14.286%, rgb(178, 9, 6) 28.572%, rgb(152, 13, 5) 28.572%, rgb(152, 13, 5) 42.858%, rgb(127, 18, 4) 42.858%, rgb(127, 18, 4) 57.144%, rgb(101, 22, 3) 57.144%, rgb(101, 22, 3) 71.43%, rgb(76, 27, 2) 71.43%, rgb(76, 27, 2) 85.716%, rgb(50, 31, 1) 85.716%, rgb(50, 31, 1) 100.002%);
@@ -34,6 +47,13 @@ body {
 }
 .containSlide__txt {
   text-align: center;
+  border: 1px solid #262626;
+  border-radius: 0px 0px 15px 15px;
+  border-top: 0px;
+  height: 20vh;
+  color: #262626;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  overflow: scroll;
 }
 .containSlide--active {
   display: block;
@@ -42,12 +62,23 @@ body {
 .containBtn {
   display: flex;
   justify-content: center;
-  width: 500px;
-  margin-top: 15px;
+  width: 50vh;
+  margin: auto;
+  margin-top: 4vh;
+  position: relative;
 }
 .containBtn > button {
-  margin-right: 20px;
-  width: 100px;
+  width: 20vh;
+  height: 4vh;
+  margin: auto;
+  background-color: black;
+  color: aliceblue;
+  border: 1px solid #262626;
+  border-radius: 5vh;
+}
+.containBtn > button:active {
+  color: #ffa7c2;
+  box-shadow: 3px 10px 30px 5px black;
 }
 
 /*# sourceMappingURL=slide.css.map */
