--- a/scss/mainscss.scss
+++ b/scss/mainscss.scss
@@ -4,23 +4,38 @@ body
 {
     padding: 0; margin: 0;
     box-sizing: border-box;
+    background-color: rgb(237, 246, 247);
+    
+}
+.slide 
+{
+    background-color: rgb(237, 246, 247);
+    margin-top: 5vh;
+
+
+    >p 
+    {
+        position: absolute;
+        @include typographieCompt;
+        margin: 2px;
+    }
 }
 .containSlide
 {
-    height: 500px;
-    width: 500px;
-    border: $border;
+    height: 80vh;
+    width: $widthBoitesSlide;
     display: none;
-    
+    margin: auto;
 
+    
     &__containImg
     {
-        height: 400px;
-        border-bottom: $border;
+        height: 60vh;
 
         &__image
         {
             height: 100%;
+            border-radius: 15px 15px 0px 0px;
 
             &--n1
             {
@@ -48,6 +63,12 @@ body
     &__txt
     {
         text-align: center;
+        border: $border;
+        border-radius: 0px 0px 15px 15px;
+        border-top: 0px;
+        height: 20vh;
+        @include typographie;
+        overflow: scroll;
     }
 
     &--active
@@ -59,14 +80,29 @@ body
 {
     display: flex;
     justify-content: center;
-    width: 500px;
-    margin-top: 15px;
+    width: $widthBoitesSlide;
+    margin :auto;
+    margin-top: 4vh;
+    position: relative;
+
 
     >button 
     {
-        margin-right: 20px;
-        width: 100px;
+        width: 20vh;
+        height: 4vh;
+        margin: auto;
+        background-color: black;
+        color: aliceblue;
+        border: $border;
+        border-radius: 5vh;
+
+        &:active
+        {
+            color: #ffa7c2 ;
+            box-shadow: 3px 10px 30px 5px black;
+        }
     }
+
 }
 
 
